--- a/index.html
+++ b/index.html
@@ -206,9 +206,79 @@
                          </p>
                 </div>
                 </div>
-                <hr>
             </div>
-            <div class="sec-3">
+            <div class="sec-1">
+                <div id="pro" class="pro">
+                    <div class="heading">
+                        <h3 class="pro-head">Professional Development</h3>
+                        <hr>
+                    </div>
+                    <div class="ppr">
+                        <div class="ppr-top">
+
+                            <b>Web Development Bootcamp by Colt Steele, Udemy</b>
+                            <br>
+                            Completed in October 2020
+                        </div>
+                        <li class="li-keji">
+                        60 hours of coursework covering HTML, CSS, JavaScript, Node.js, and MongoDB
+                        </li>
+                        <li class="li-keji">
+
+                            Designed and implemented several web applications using full-stack development techniques
+                        </li>
+                        <!-- <li class="li-keji">
+                            Gained experience working with popular web development frameworks, such as Express.js and React.js
+
+                        </li> -->
+                        <li class="li-keji">
+                            Completed several coding challenges and quizzes to reinforce understanding of key concepts
+
+                             </li>
+                        <!-- <li class="li-keji">wix</li> -->
+
+                </div>
+                </div>
+            </div>
+            <br>
+            <br>
+            <div class="sec-1">
+                <div id="pro" class="pro">
+                    <!-- <div class="heading">
+                        <h3 class="pro-head">Professional Development</h3>
+                        <hr>
+                    </div> -->
+                    <div class="ppr">
+                        <div class="ppr-top">
+
+                            <b>
+The Complete Digital Marketing Course by Rob Percival, Udemy
+                            </b>
+                            <br>
+                            Completed in January 2019
+                        </div>
+                        <li class="li-keji">
+30 hours of coursework covering various aspects of digital marketing, including SEO, social media marketing, email marketing, and PPC advertising
+
+                        </li>
+                        <li class="li-keji">
+                            Gained experience working with popular marketing tools, such as Google Analytics and AdWords
+
+                        </li>
+                        <li class="li-keji">
+Learned how to create effective marketing campaigns and track their performance using analytics
+
+
+                        </li>
+                        <li class="li-keji">
+                            Completed several coding challenges and quizzes to reinforce understanding of key concepts
+
+                             </li>
+                        <!-- <li class="li-keji">wix</li> -->
+
+
+                </div>
+                </div>
             </div>
         </div>
    </div>   
