--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </div>
             <div class="socials" id="socials">
                 <div class="details" id="ddd">
-                    <div class="contact-icons" id="email"> <img class="icon" src="world-wide-web.png" alt="">morzook.github.io/my-portfolio-2</div>
+                    <div class="contact-icons" id="email"> <img class="icon" src="world-wide-web.png" alt="">https://morzook.github.io/my-portfolio-2</div>
                             <div class="contact-icons" id="phone"> <img class="icon" src="github.png" alt=""> https://github.com/morzook</div>
                             <div class="contact-icons" id="address"> <img class="icon" src="linkedin.png" alt="">https://www.linkedin.com/in/morzook</div>
                 </div>
